<resources>

    <string name="app_name">IntentHelper2</string>
    <string name="preference_howtouse">How to use</string>
    <string name="preference_howtouse_summary">Open how to use in browser.</string>
    <string name="app_version">IntentHelper2 (Pocketfxxker) 2.00</string>
    <string name="preference_version">Version</string>
    <string name="expanding_pleasewait">Expanding URL.... Please wait...</string>
    <string name="preference_max_redirect_count">Redirect count</string>
    <string name="preference_max_redirect_count_summary">Max redirect count at once</string>
    <string name="preference_category_appinfo">Application Information</string>
    <string name="preference_preference">Preference</string>
    <string name="preference_shown_applications">Shown applications</string>
    <string name="preference_shown_applications_summary">Applications that you want to show in chooser</string>
    <string name="preference_onetap_intent">Always use same application</string>
    <string name="preference_onetap_intent_summary">Always open same app when IntentHelper2 tapped on chooser</string>
    <string name="title_activity_onetap_intent_preference">Always use same application</string>
    <string name="preference_developed_by">Developer</string>
    <string name="preference_developed_by_summary">"@"skaphy</string>
    <string name="howtouse_url">http://skaphylog.tumblr.com/</string>
    <string name="developer_url">http://twitter.com/skaphy</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_intent_helper_chooser">IntentHelper</string>

</resources>